--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # You can specify a different version
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
@@ -31,3 +31,12 @@ jobs:
           TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}
         run: python bot.py
         working-directory: ./mcq_telegram_bot
+
+      - name: Commit and push progress
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add mcq_telegram_bot/progress.txt
+          git commit -m "Update question progress" || echo "No changes to commit"
+          git push
+        working-directory: .
